# newsletter

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  rustfmt.toml
.github/workflows/: README.md  main.yml
.sqlx/: query-55cd8c591e628d9733504d44b9de8e814b9d9187d6eb62eeaef275aef4d6beb8.json  query-6deff5e6ef31b0c091b47d9384536cdc6292b884a4cee35f8170a0d041e3d1bd.json  query-fd49d42ce65b0a33c173beeac2bfa509b1a07dc5b91c2906947331750c4fb2e2.json
configuration/: base.yaml  production.yaml
docs/: crates.js  help.html  index.html  settings.html  source-files.js
docs/actix_codec/: fn.poll_read_buf.html  struct.BytesCodec.html  struct.Framed.html  struct.FramedParts.html  struct.LinesCodec.html  struct.ReadBuf.html  trait.AsyncRead.html  trait.AsyncWrite.html  trait.Decoder.html  trait.Encoder.html
docs/actix_http/: all.html  enum.ConnectionType.html  enum.KeepAlive.html  enum.Payload.html  enum.Protocol.html  enum.RequestHeadType.html  index.html  struct.Extensions.html  struct.HttpService.html  struct.HttpServiceBuilder.html  struct.Message.html  struct.Method.html  struct.Request.html  struct.RequestHead.html  struct.Response.html  struct.ResponseBuilder.html  struct.ResponseHead.html  struct.ServiceConfig.html  struct.StatusCode.html  struct.Uri.html  struct.Version.html  trait.HttpMessage.html
docs/actix_router/: enum.Patterns.html  index.html  struct.Path.html  struct.PathDeserializer.html  struct.Quoter.html  struct.ResourceDef.html  struct.ResourceId.html  struct.Router.html  struct.RouterBuilder.html  struct.Url.html  trait.IntoPatterns.html  trait.Resource.html  trait.ResourcePath.html
docs/actix_server/: all.html  enum.MpTcp.html  index.html  struct.Server.html  struct.ServerBuilder.html  struct.ServerHandle.html  struct.TestServer.html
docs/actix_service/: trait.Service.html  trait.ServiceFactory.html
docs/actix_web/: all.html  attr.connect.html  attr.delete.html  attr.get.html  attr.head.html  attr.main.html  attr.options.html  attr.patch.html  attr.post.html  attr.put.html  attr.route.html  attr.routes.html  attr.test.html  attr.trace.html  enum.Either.html  index.html  struct.App.html  struct.CustomizeResponder.html  struct.HttpRequest.html  struct.HttpResponse.html  struct.HttpResponseBuilder.html  struct.HttpServer.html  struct.Resource.html  struct.Route.html  struct.Scope.html  trait.FromRequest.html  trait.Handler.html  trait.HttpMessage.html  trait.Responder.html  type.Result.html
docs/actix_web_codegen/: all.html  attr.connect.html  attr.delete.html  attr.get.html  attr.head.html  attr.main.html  attr.options.html  attr.patch.html  attr.post.html  attr.put.html  attr.route.html  attr.routes.html  attr.test.html  attr.trace.html  index.html
docs/actix_web_flash_messages/: all.html  enum.Level.html  index.html  sidebar-items.js  struct.FlashMessage.html  struct.FlashMessagesFramework.html  struct.FlashMessagesFrameworkBuilder.html  struct.IncomingFlashMessages.html
docs/aes/: struct.Aes128Enc.html  struct.Aes192.html  struct.Aes192Enc.html  struct.Aes256Enc.html
docs/aes_gcm/: index.html  struct.AesGcm.html  trait.KeyInit.html  trait.KeySizeUser.html
docs/ahash/: index.html  struct.AHashMap.html  struct.AHashSet.html
docs/aho_corasick/: index.html  struct.PatternID.html  struct.Span.html
docs/anyhow/: fn.Ok.html  index.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
docs/argon2/: all.html  constant.ARGON2D_IDENT.html  constant.ARGON2ID_IDENT.html  constant.ARGON2I_IDENT.html  constant.MAX_PWD_LEN.html  constant.MAX_SALT_LEN.html  constant.MAX_SECRET_LEN.html  constant.MIN_SALT_LEN.html  constant.RECOMMENDED_SALT_LEN.html  enum.Algorithm.html  enum.Error.html  enum.Version.html  index.html  struct.Argon2.html  struct.AssociatedData.html  struct.Block.html  struct.KeyId.html  struct.Params.html  struct.ParamsBuilder.html  struct.PasswordHash.html  trait.PasswordHasher.html  trait.PasswordVerifier.html  type.Result.html
docs/async_trait/: attr.async_trait.html  index.html
docs/atomic_write_file/: all.html  index.html  struct.AtomicWriteFile.html  struct.OpenOptions.html
docs/base64/: enum.DecodeError.html  enum.EncodeSliceError.html  fn.encoded_len.html  index.html
docs/base64ct/: enum.Error.html  enum.LineEnding.html  struct.Base64.html  struct.Base64Bcrypt.html  struct.Base64Crypt.html  struct.Base64ShaCrypt.html  struct.Base64Unpadded.html  struct.Base64Url.html  struct.Base64UrlUnpadded.html  struct.Decoder.html  (+4 more)
migrations/: 20230820175226_create_subscriptions_table.sql  20230924164152_make_status_not_null_in_subscriptions.sql
scripts/: compose.yaml  init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
tests/: health_check.rs  health_check_test.rs
(+30228 files in other folders)
