[package]
edition = "2021"
name = "newsletter"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "newsletter"
path = "src/main.rs"

[profile.release]
# See https://github.com/johnthagen/min-sized-rust#strip-symbols-from-binary
# remove symbols from .elf file.
strip = true
# 3 is performance, z is size.
opt-level = 3
# Linker optimization at link stage.
# lto = true
# Default is 16 codegen units, but prevents optimizations.
codegen-units = 1
# Default is to unwind stack for backtrace. For prod, this is unnecessary.
panic = "abort"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.75"
argon2 = {version = "0.5.2", features = ["std"] }
base64 = "0.21.5"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.20"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde-aux = "4.2.0"
sqlx = { version = "0.7.1", default_features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.6"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "registry",
] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.4.1", features = ["v4"] }
validator = "0.16.1"

[dev-dependencies]
claym = "0.5.1"
fake = "2.8.0"
linkify = "0.10.0"
once_cell = "1.18.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1.0.107"
serde_urlencoded = "0.7.1"
tokio = { version = "1.32.0", features = ["macros", "rt"] }
url = "2.4.0"
wiremock = "0.5.19"
